fix: 树形菜单获取出错